# qsp-orientation

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api-overview.md  architecture.md  downstream-usage.md  repo-roadmap.md
examples/: attitude_demo.py  diagnostics_demo.py  imu_demo.py  orientation_demo.py
qsp/orientation/: __init__.py  attitude.py  diagnostics.py  frames.py  fusion.py  imu.py
qsp_orientation/: __init__.py  attitude.py  diagnostics.py  frames.py  fusion.py  imu.py  utils.py
tests/: test_attitude.py  test_diagnostics.py  test_frames.py  test_fusion.py  test_imu.py  test_package_api.py  test_utils.py
