[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qsp-orientation"
version = "0.1.0"
description = "Quaternion-based attitude estimation, frame transforms, IMU fusion, and drift diagnostics"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["qsp_orientation*"]
